--- a/src/features/DeliveryAndPayment/delivery-and-payment-page/DeliveryAndPaymentPage.module.scss
+++ b/src/features/DeliveryAndPayment/delivery-and-payment-page/DeliveryAndPaymentPage.module.scss
@@ -1,12 +1,14 @@
+@import "../../../shared/styles/functions";
+
 .container {
-    display: flex;
-    flex-direction: column;
-    gap: 140px;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(140);
 
-    margin-bottom: 140px;
+  margin-bottom: vw-1490(140);
 
-    @media (max-width: 768px) {
-        gap: 72px;
-        margin-bottom: 72px;
-    }
+  @media (max-width: 768px) {
+    gap: 72px;
+    margin-bottom: 72px;
+  }
 }
