--- a/src/features/Products/products-page/ProductsPage.module.scss
+++ b/src/features/Products/products-page/ProductsPage.module.scss
@@ -1,30 +1,33 @@
+@import "../../../shared/styles/functions";
+
 .container {
-    display: flex;
-    flex-direction: column;
-    gap: 140px;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(140);
 
-    margin: 0 auto;
-    margin-bottom: 140px;
+  margin: 0 auto;
+  margin-bottom: vw-1490(140);
 
-    @media (max-width: 768px) {
-        width: 336px;
-        margin-bottom: 72px;
-    }
+  @media (max-width: 768px) {
+    width: 336px;
+    margin-bottom: 72px;
+  }
 }
 
-.content{
-    display: flex;
-    flex-direction: column;
-    gap: 36px;
-    & > h1,h2 {
-        text-align: center;
-    }
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(36);
+  & > h1,
+  h2 {
+    text-align: center;
+  }
 }
 
 .products {
-    display: flex;
-    gap: 24px;
-    @media (max-width: 768px) {
-        flex-direction: column;
-    }
+  display: flex;
+  gap: vw-1490(24);
+  @media (max-width: 768px) {
+    flex-direction: column;
+  }
 }
