--- a/src/features/Profile/my-suggested-prices/my-suggested-prices-card/MySuggestedPricesCard.module.scss
+++ b/src/features/Profile/my-suggested-prices/my-suggested-prices-card/MySuggestedPricesCard.module.scss
@@ -1,84 +1,86 @@
+@import "../../../../shared/styles/functions";
+
 .card {
-    display: flex;
-    gap: 16px;
+  display: flex;
+  gap: vw-1490(16);
 
-    width: 460px;
-    box-sizing: border-box;
+  width: vw-1490(460);
+  box-sizing: border-box;
 
-    padding: 20px;
-    background-color: var(--color-bg);
-    border: 1px solid #2125314D;
-    border-radius: 6px;
+  padding: vw-1490(20);
+  background-color: var(--color-bg);
+  border: 1px solid #2125314d;
+  border-radius: 6px;
 
-    @media (max-width: 768px) {
-        width: 336px;
-        padding: 20px 16px;
-    }
+  @media (max-width: 768px) {
+    width: 336px;
+    padding: 20px 16px;
+  }
 }
 
 .imageContainer {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(10);
 
-    height: fit-content;
+  height: fit-content;
 
-    padding: 16px;
+  padding: vw-1490(16);
 
-    background-color: var(--color-grey-1);
-    border-radius: 6px;
+  background-color: var(--color-grey-1);
+  border-radius: 6px;
 
-    & > p {
-        text-align: center;
-    }
+  & > p {
+    text-align: center;
+  }
 
-    @media (max-width: 768px) {
-        padding: 12px;
-    }
+  @media (max-width: 768px) {
+    padding: 12px;
+  }
 }
 
 .image {
-    background-color: var(--color-bg);
-    border-radius: 6px;
+  background-color: var(--color-bg);
+  border-radius: 6px;
 }
 
 .input {
-    height: 36px;
+  height: vw-1490(36);
 }
 
 .productInfo {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(16);
 
-    width: 252px;
+  width: vw-1490(252);
 
-    @media (max-width: 768px) {
-        width: 168px;
-        gap: 12px;
-    }
+  @media (max-width: 768px) {
+    width: 168px;
+    gap: 12px;
+  }
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(4);
 }
 
 .flexContainer {
-    display: flex;
-    gap: 12px;
+  display: flex;
+  gap: vw-1490(12);
 
-    @media (max-width: 768px) {
-        flex-direction: column;
-        gap: 8px;
-    }
+  @media (max-width: 768px) {
+    flex-direction: column;
+    gap: 8px;
+  }
 }
 
 .button {
-    width: 140px;
-    height: 36px;
-    @media (max-width: 768px) {
-        width: 128px;
-    }
+  width: vw-1490(140);
+  height: vw-1490(36);
+  @media (max-width: 768px) {
+    width: 128px;
+  }
 }
