--- a/src/features/About/about-page/AboutPage.module.scss
+++ b/src/features/About/about-page/AboutPage.module.scss
@@ -1,6 +1,8 @@
+@import "../../../shared/styles/functions";
+
 .container {
-    display: flex;
-    flex-direction: column;
-    gap: 140px;
-    margin-bottom: 140px;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(140);
+  margin-bottom: vw-1490(140);
 }
