--- a/src/features/About/advantages/Advantages.module.scss
+++ b/src/features/About/advantages/Advantages.module.scss
@@ -1,99 +1,101 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+@import "../../../shared/styles/functions";
 
-    & > h2 {
-        margin-bottom: 32px;
-        @media (max-width: 768px) {
-            margin-bottom: 24px;
-        }
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  & > h2 {
+    margin-bottom: vw-1490(32);
+    @media (max-width: 768px) {
+      margin-bottom: 24px;
     }
+  }
 }
 
 .aboutUs {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        width: 856px;
-        margin-bottom: 72px;
-        
-        & > h1 {
-            margin-bottom: 32px;
-        }
-    
-        & > p {
-            margin-bottom: 24px;
-        }
-    
-        & > img {
-            border-radius: 6px;
-        }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: vw-1490(856);
+  margin-bottom: vw-1490(72);
 
-        @media (max-width: 768px) {
-            width: 336px;
-            & > p {
-                margin-bottom: 16px;
-            }
-        }
+  & > h1 {
+    margin-bottom: vw-1490(32);
+  }
+
+  & > p {
+    margin-bottom: vw-1490(24);
+  }
+
+  & > img {
+    border-radius: 6px;
+  }
+
+  @media (max-width: 768px) {
+    width: 336px;
+    & > p {
+      margin-bottom: 16px;
+    }
+  }
 }
 
 .cardsContainer {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 32px 24px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: vw-1490(32) vw-1490(24);
 
-    @media (max-width: 768px) {
-        display: flex;
-        flex-direction: column;
-        gap: 16px;
-    }
+  @media (max-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
 }
 
 .card {
-    position: relative;
-    width: 306px;
-    height: 369px;
-    box-sizing: border-box;
-    padding: 24px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    
-    background-color: var(--color-bg);
-    border-radius: 6px;
-    box-shadow: 6px 12px 13px 0px #2225310A;
+  position: relative;
+  width: vw-1490(306);
+  height: vw-1490(369);
+  box-sizing: border-box;
+  padding: vw-1490(24);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
-    & > h2 {
-        color: var(--color-accent-orange);
-    }
+  background-color: var(--color-bg);
+  border-radius: 6px;
+  box-shadow: 6px 12px 13px 0px #2225310a;
 
-    & > h3 {
-        margin-bottom: 8px;
-    }
+  & > h2 {
+    color: var(--color-accent-orange);
+  }
 
-    & > p {
-        opacity: 0.6;
-        white-space: pre-line;
-    }
+  & > h3 {
+    margin-bottom: vw-1490(8);
+  }
 
-    & > svg {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
+  & > p {
+    opacity: 0.6;
+    white-space: pre-line;
+  }
 
-    @media (max-width: 768px) {
-        width: 336px;
-        height: 261px;
-        padding: 24px 16px;
-    }
+  & > svg {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  @media (max-width: 768px) {
+    width: 336px;
+    height: 261px;
+    padding: 24px 16px;
+  }
 }
 
 .infoContainer {
-    min-height: 172px;
-    @media (max-width: 768px) {
-        min-height: 0;
-    }
+  min-height: vw-1490(172);
+  @media (max-width: 768px) {
+    min-height: 0;
+  }
 }
