--- a/src/features/CatalogHeader/catalog-menu/CatalogMenu.module.scss
+++ b/src/features/CatalogHeader/catalog-menu/CatalogMenu.module.scss
@@ -1,64 +1,66 @@
+@import "../../../shared/styles/functions";
+
 .container {
-    display: flex;
-    height: fit-content;
-    width: fit-content;
-    border: 1px solid #7D7D7D4D;
-    
-    border-radius: 6px;
-    overflow: hidden;
+  display: flex;
+  height: fit-content;
+  width: fit-content;
+  border: 1px solid #7d7d7d4d;
+
+  border-radius: 6px;
+  overflow: hidden;
 }
 .navigate {
-    box-sizing: border-box;
-    overflow: hidden;
-    border-radius: 6px;
-    width: 306px;
-    height: 100%;
+  box-sizing: border-box;
+  overflow: hidden;
+  border-radius: 6px;
+  width: vw-1490(306);
+  height: 100%;
 }
 
 .category {
-    display: flex;
-    gap: 12px;
-    align-items: center;
+  display: flex;
+  gap: vw-1490(12);
+  align-items: center;
 
-    padding: 12px;
-    background-color: var(--color-grey-1);
-    border-bottom: 1px solid #7D7D7D33;
+  padding: vw-1490(12);
+  background-color: var(--color-grey-1);
+  border-bottom: 1px solid #7d7d7d33;
 
+  & > svg {
+    margin-left: auto;
+  }
+
+  &:hover {
+    cursor: pointer;
+    background-color: var(--color-text);
+    & > p {
+      color: var(--color-bg);
+    }
     & > svg {
-        margin-left: auto;
+      color: var(--color-accent-orange);
     }
-
-    &:hover {
-        cursor: pointer;
-        background-color: var(--color-text);
-        & > p {
-            color: var(--color-bg);
-        }
-        & > svg {
-            color: var(--color-accent-orange);
-        }
-    }
+  }
 }
 
 .active {
-    background-color: var(--color-text);
-    & > p {
-        color: var(--color-bg);
-    }
-    & > svg {
-        color: var(--color-accent-orange);
-    }
+  background-color: var(--color-text);
+  & > p {
+    color: var(--color-bg);
+  }
+  & > svg {
+    color: var(--color-accent-orange);
+  }
 }
 
 .imageCategory {
-    border: 1px solid var(--color-accent-orange);
-    border-radius: 50%;
-    box-sizing: border-box;
-    background-color: var(--color-bg);
+  border: 1px solid var(--color-accent-orange);
+  border-radius: 50%;
+  box-sizing: border-box;
+  background-color: var(--color-bg);
 }
 
 .iconCategory {
-    width: 22px;
-    height: 22px;
-    flex-shrink: 0;
+  width: vw-1490(22);
+  height: vw-1490(22);
+  flex-shrink: 0;
 }
