--- a/src/features/CatalogHeader/category-elem/CategoryElem.module.scss
+++ b/src/features/CatalogHeader/category-elem/CategoryElem.module.scss
@@ -1,33 +1,35 @@
+@import "../../../shared/styles/functions";
+
 .elem {
-    min-width: 195px;
+  min-width: vw-1490(195);
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(12);
+  margin-bottom: vw-1490(12);
+
+  & > ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
     display: flex;
     flex-direction: column;
-    gap: 12px;
-    margin-bottom: 12px;
-
-    & > ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-        & > a {
-            position: relative;
-            padding-left: 16px;
-            &::before {
-                box-sizing: border-box;
-                content: "";
-                position: absolute;
-                top: 50%;
-                left: 0;
-                transform: translateY(-50%) rotate(45deg);
-                width: 7px;
-                height: 7px;
-                background-color: var(--color-accent-orange);
-                border-radius: 1px;
-              }
-        }
+    gap: 8px;
+    & > a {
+      position: relative;
+      padding-left: vw-1490(16);
+      &::before {
+        box-sizing: border-box;
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%) rotate(45deg);
+        width: vw-1490(7);
+        height: vw-1490(7);
+        background-color: var(--color-accent-orange);
+        border-radius: 1px;
+      }
     }
+  }
 }
