--- a/src/features/DeliveryAndPayment/LiftingConditions/LiftingConditions.module.scss
+++ b/src/features/DeliveryAndPayment/LiftingConditions/LiftingConditions.module.scss
@@ -1,65 +1,69 @@
+@import "../../../shared/styles/functions";
+
 .container {
-    display: flex;
-    flex-direction: column;
-    & > h3 {
-        margin-bottom: 24px;
+  display: flex;
+  flex-direction: column;
+  & > h3 {
+    margin-bottom: vw-1490(24);
+  }
+  & > p {
+    margin-bottom: vw-1490(20);
+  }
+
+  @media (max-width: 768px) {
+    width: 336px;
+    margin: 0 auto;
+    & > h3,
+    h4 {
+      margin-bottom: 12px;
     }
     & > p {
-        margin-bottom: 20px;
+      margin-bottom: 36px;
     }
-
-    @media (max-width: 768px) {
-        width: 336px;
-        margin: 0 auto;
-        & > h3, h4 {
-            margin-bottom: 12px;
-        }
-        & > p {
-            margin-bottom: 36px;
-        }
-    }
+  }
 }
 
 .elem {
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(16);
+
+  margin-bottom: vw-1490(32);
+  & > ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
     display: flex;
     flex-direction: column;
-    gap: 16px;
-
-    margin-bottom: 32px;
-    & > ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-        & > li {    
-            position: relative;
-            padding-left: 16px;
-            &::before {
-                box-sizing: border-box;
-                content: "";
-                position: absolute;
-                top: 50%;
-                left: 0;
-                transform: translateY(-50%) rotate(45deg);
-                width: 7px;
-                height: 7px;
-                background-color: var(--color-accent-orange);
-                border-radius: 1px;
-              }
-        }
+    gap: vw-1490(8);
+    & > li {
+      position: relative;
+      padding-left: vw-1490(16);
+      &::before {
+        box-sizing: border-box;
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%) rotate(45deg);
+        width: vw-1490(7);
+        height: vw-1490(7);
+        background-color: var(--color-accent-orange);
+        border-radius: 1px;
+      }
     }
+  }
 
-    @media (max-width: 768px) {
-        gap: 12px;
-        margin-bottom: 36px;
-        & > h3, h4 {
-            margin-bottom: 0;
-        }
-        & > p {
-            margin-bottom: 0;
-        }
+  @media (max-width: 768px) {
+    gap: 12px;
+    margin-bottom: 36px;
+    & > h3,
+    h4 {
+      margin-bottom: 0;
     }
+    & > p {
+      margin-bottom: 0;
+    }
+  }
 }
