--- a/src/features/DeliveryAndPayment/PaymentMethod/PaymentMethod.module.scss
+++ b/src/features/DeliveryAndPayment/PaymentMethod/PaymentMethod.module.scss
@@ -1,28 +1,30 @@
+@import "../../../shared/styles/functions";
+
 .container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  & > h3 {
+    margin-bottom: vw-1490(24);
+  }
+  & > p {
+    margin-bottom: vw-1490(8);
+  }
+
+  @media (max-width: 768px) {
+    width: 336px;
+    margin: 0 auto;
     & > h3 {
-        margin-bottom: 24px;
+      margin-bottom: 16px;
     }
     & > p {
-        margin-bottom: 8px;
+      margin-bottom: 16px;
     }
-
-    @media (max-width: 768px) {
-        width: 336px;
-        margin: 0 auto;
-        & > h3 {
-            margin-bottom: 16px;
-        }
-        & > p {
-            margin-bottom: 16px;
-        }
-    }
+  }
 }
 
 .icons {
-    width: fit-content;
-    display: flex;
-    gap: 20px;
-    align-items: center;
+  width: fit-content;
+  display: flex;
+  gap: vw-1490(20);
+  align-items: center;
 }
