--- a/src/features/Payment/add-new-address/AddNewAddress.module.scss
+++ b/src/features/Payment/add-new-address/AddNewAddress.module.scss
@@ -1,39 +1,41 @@
+@import "../../../shared/styles/functions";
+
 .addAddress {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-bottom: 32px;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(20);
+  margin-bottom: vw-1490(32);
 }
 
 .saveAdressButton {
-    width: 258px;
-    height: 58px;
+  width: vw-1490(258);
+  height: vw-1490(58);
 
-    @media (max-width: 768px) {
-        height: 42px;
-        width: 100%;
-    }
+  @media (max-width: 768px) {
+    height: 42px;
+    width: 100%;
+  }
 }
 
 .buttonBack {
-    text-align: start;
-    text-decoration: underline;
+  text-align: start;
+  text-decoration: underline;
 }
 
 .addressFields {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(12);
 }
 
 .inputContainer {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(8);
 
-    @media (max-width: 768px) {
-        & > button {
-            height: 50px;
-        }
+  @media (max-width: 768px) {
+    & > button {
+      height: 50px;
     }
+  }
 }
