--- a/src/features/Payment/payment-page/PaymentPage.module.scss
+++ b/src/features/Payment/payment-page/PaymentPage.module.scss
@@ -1,73 +1,74 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    gap: 36px;
+@import "../../../shared/styles/functions";
 
-    margin-bottom: 140px;
-    & > h1 {
-        text-align: center;
-    }
-    @media (max-width: 768px) {
-        width: 336px;
-        margin: 0 auto 72px;
-    }
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(36);
+
+  margin-bottom: vw-1490(140);
+  & > h1 {
+    text-align: center;
+  }
+  @media (max-width: 768px) {
+    width: 336px;
+    margin: 0 auto 72px;
+  }
 }
 
 .content {
-    display: flex;
-    gap: 66px;
-    @media (max-width: 768px) {
-        flex-direction: column;
-        gap: 20px;
-    }
+  display: flex;
+  gap: vw-1490(66);
+  @media (max-width: 768px) {
+    flex-direction: column;
+    gap: 20px;
+  }
 }
 
-.price {   
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    
-    width: 306px;
-    height: fit-content;
-    padding: 32px 24px;
-    
-    border: 1px solid #2125314D;
-    border-radius: 6px;
-    box-shadow: 6px 12px 13px 0px #2225310A;
+.price {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
 
-    align-self: flex-start;
-    
+  width: vw-1490(306);
+  height: fit-content;
+  padding: vw-1490(32) vw-1490(24);
+
+  border: 1px solid #2125314d;
+  border-radius: 6px;
+  box-shadow: 6px 12px 13px 0px #2225310a;
+
+  align-self: flex-start;
+
+  & > button {
+    height: vw-1490(58);
+  }
+
+  @media (max-width: 768px) {
+    width: 336px;
+    padding: 24px 16px;
     & > button {
-        height: 58px;
+      height: 42px;
     }
-
-    @media (max-width: 768px) {
-        width: 336px;
-        padding: 24px 16px;
-        & > button {
-            height: 42px;
-        }
-    }
+  }
 }
 .total {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 15px;
-    &:nth-child(4){
-        border-top: 1px solid #7D7D7D50;
-        padding-top: 16px;
-        margin-bottom: 24px;
-    }
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: vw-1490(15);
+  &:nth-child(4) {
+    border-top: 1px solid #7d7d7d50;
+    padding-top: vw-1490(16);
+    margin-bottom: vw-1490(24);
+  }
 }
 
 .form {
-    width: 924px;
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-    @media (max-width: 768px) {
-        width: 100%;
-        gap: 20px;
-    }
+  width: vw-1490(924);
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(24);
+  @media (max-width: 768px) {
+    width: 100%;
+    gap: 20px;
+  }
 }
-
