--- a/src/features/Payment/purchase-method/PurchaseMethod.module.scss
+++ b/src/features/Payment/purchase-method/PurchaseMethod.module.scss
@@ -1,8 +1,10 @@
+@import "../../../shared/styles/functions";
+
 .payment {
   display: flex;
   flex-direction: column;
 
-  padding: 32px 24px;
+  padding: vw-1490(32) vw-1490(24);
 
   background-color: var(--color-bg);
   border: 1px solid #2125314d;
@@ -13,9 +15,9 @@
 .title {
   display: flex;
   align-items: center;
-  gap: 8px;
+  gap: vw-1490(8);
 
-  margin-bottom: 20px;
+  margin-bottom: vw-1490(20);
 }
 
 .numCard {
@@ -39,7 +41,7 @@
 .inputContainer {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: vw-1490(8);
 
   @media (max-width: 768px) {
     & > button {
@@ -51,14 +53,14 @@
 .cardsContainer {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+  gap: vw-1490(24);
 }
 
 .card {
   box-sizing: border-box;
-  width: 275px;
-  height: 121px;
-  padding: 12px;
+  width: vw-1490(275);
+  height: vw-1490(121);
+  padding: vw-1490(12);
 
   display: flex;
   flex-direction: column;
@@ -71,11 +73,11 @@
 .selectedAdress {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: vw-1490(12);
   align-items: start;
   & > button {
     text-decoration: underline;
-    margin: 16px 0 32px;
+    margin: vw-1490(16) 0 vw-1490(32);
   }
 
   @media (max-width: 768px) {
@@ -89,7 +91,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: vw-1490(16);
 }
 
 .deliveryTitle {
@@ -110,7 +112,7 @@
 
 .deliveryTimeContainer {
   display: flex;
-  gap: 24px;
+  gap: vw-1490(24);
   @media (max-width: 768px) {
     flex-direction: column;
   }
@@ -119,20 +121,20 @@
 .addAddress {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  margin-bottom: 32px;
+  gap: vw-1490(20);
+  margin-bottom: vw-1490(32);
 }
 
 .addressFields {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: vw-1490(12);
 }
 
 .inputContainer {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: vw-1490(8);
 
   @media (max-width: 768px) {
     & > button {
