--- a/src/features/Product/product-images/ProductImages.module.scss
+++ b/src/features/Product/product-images/ProductImages.module.scss
@@ -1,81 +1,82 @@
-.container {
-    display: flex;
-    gap: 24px;
-    height: 416px;
+@import "../../../shared/styles/functions";
 
-    @media (max-width: 768px) {
-        flex-direction: column-reverse;
-        gap: 12px;
-    }
+.container {
+  display: flex;
+  gap: vw-1490(24);
+  height: vw-1490(416);
+
+  @media (max-width: 768px) {
+    flex-direction: column-reverse;
+    gap: 12px;
+  }
 }
 .imagesContainer {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    
-    overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(12);
 
-    @media (max-width: 768px) {
-        flex-direction: row;
-        overflow-x: auto;
-    }
+  overflow-y: scroll;
 
-    &::-webkit-scrollbar{
-        width: 5px; 
-    }
-    
-    &::-webkit-scrollbar-thumb{
-        background-color: var(--color-grey-4);
-        border-radius: 4px;
-        &:hover {
-            background-color: var(--color-grey-2);
-        }
-    }
+  @media (max-width: 768px) {
+    flex-direction: row;
+    overflow-x: auto;
+  }
 
-    &::-webkit-scrollbar-track{
-        background-color: transparent;
-        border-radius: 4px;
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--color-grey-4);
+    border-radius: 4px;
+    &:hover {
+      background-color: var(--color-grey-2);
     }
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+    border-radius: 4px;
+  }
 }
 
 .imageContainer {
-    position: relative;
+  position: relative;
 }
 
 .image {
-    box-sizing: border-box;
-    object-fit: cover;
-    border: 1px solid var( --color-grey-4);
-    border-radius: 6px;
-    cursor: pointer;
+  box-sizing: border-box;
+  object-fit: cover;
+  border: 1px solid var(--color-grey-4);
+  border-radius: 6px;
+  cursor: pointer;
 }
 
 .tagsContainer {
-    position: absolute;
-    top: 28px;
-    left: 24px;
+  position: absolute;
+  top: vw-1490(28);
+  left: vw-1490(24);
 
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    & > p {
-        padding: 3px 8px;
-        opacity: 0.6;
-        width: fit-content;
-        border-radius: 4px;
-        color: var(--color-bg);
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(8);
+  & > p {
+    padding: vw-1490(3) vw-1490(8);
+    opacity: 0.6;
+    width: fit-content;
+    border-radius: 4px;
+    color: var(--color-bg);
 
-        &.promotion{
-            background-color: var(--color-accent-red);
-        }
-        
-        &.new{
-            background-color: var(--color-accent-green);
-        }
-        
-        &.popular{
-            background-color: var(--color-accent-blue);
-
-        }
+    &.promotion {
+      background-color: var(--color-accent-red);
     }
+
+    &.new {
+      background-color: var(--color-accent-green);
+    }
+
+    &.popular {
+      background-color: var(--color-accent-blue);
+    }
+  }
 }
