--- a/src/features/Product/request-discount-popup/RequestDiscountPopup.module.scss
+++ b/src/features/Product/request-discount-popup/RequestDiscountPopup.module.scss
@@ -1,99 +1,99 @@
+@import "../../../shared/styles/functions";
+
 .overlay {
-    position: fixed;
-    background: #21253180;
-    inset: 0;
-    z-index: 999;
-    overflow-y: auto;
-    animation: fadeIn 0.3s ease-out;
+  position: fixed;
+  background: #21253180;
+  inset: 0;
+  z-index: 999;
+  overflow-y: auto;
+  animation: fadeIn 0.3s ease-out;
 }
 
 .content {
-    box-sizing: border-box;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1000;
-    
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
+  box-sizing: border-box;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
 
-    width: 856px;
-    max-height: 100vh;
-    overflow-y: scroll;
-    padding: 46px 32px;    
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(32);
 
-    background-color: var(--color-bg);
-    border-radius: 6px;
+  width: vw-1490(856);
+  max-height: 100vh;
+  overflow-y: scroll;
+  padding: vw-1490(46) vw-1490(32);
 
-    animation: fadeIn 0.3s ease-out;
+  background-color: var(--color-bg);
+  border-radius: 6px;
 
-    & > h3 {
-        text-align: center;
-        margin-bottom: 20px;
-        @media (max-width: 768px) {
-            margin-bottom: 4px;
-        }
-    }
+  animation: fadeIn 0.3s ease-out;
 
+  & > h3 {
+    text-align: center;
+    margin-bottom: vw-1490(20);
     @media (max-width: 768px) {
-        width: 336px;
-        padding: 46px 16px;   
-        gap: 20px;
+      margin-bottom: 4px;
     }
+  }
 
-    &::-webkit-scrollbar{
-        width: 5px;
-    }
-    
-    &::-webkit-scrollbar-thumb{
-        background-color: var(--color-grey-4);
-        border-radius: 4px;
-        &:hover {
-            background-color: var(--color-grey-2);
-        }
-    }
+  @media (max-width: 768px) {
+    width: 336px;
+    padding: 46px 16px;
+    gap: 20px;
+  }
 
-    &::-webkit-scrollbar-track{
-        background-color: transparent;
-        border-radius: 4px;
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--color-grey-4);
+    border-radius: 4px;
+    &:hover {
+      background-color: var(--color-grey-2);
     }
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+    border-radius: 4px;
+  }
 }
 
 .buttonsContainer {
-    display: flex;
-    justify-content: center;
-    gap: 12px;
-    & > button {
-        width: 230px;
-    }
+  display: flex;
+  justify-content: center;
+  gap: vw-1490(12);
+  & > button {
+    width: vw-1490(230);
+  }
 
-    @media (max-width: 768px) {
-        flex-direction: column;
-        & > button {
-            width: 100%;
-        }
+  @media (max-width: 768px) {
+    flex-direction: column;
+    & > button {
+      width: 100%;
     }
+  }
 }
 
-
-
 .closeButton {
-    position: absolute;
-    right: 20px;
-    top: 20px;
+  position: absolute;
+  right: vw-1490(20);
+  top: vw-1490(20);
 
-    padding: 0;
-    margin: 0;
-    outline: none;
+  padding: 0;
+  margin: 0;
+  outline: none;
 }
 
 @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
+  from {
+    opacity: 0;
   }
+  to {
+    opacity: 1;
+  }
+}
