--- a/src/features/Products/products-content/ProductsContent.module.scss
+++ b/src/features/Products/products-content/ProductsContent.module.scss
@@ -1,22 +1,24 @@
+@import "../../../shared/styles/functions";
+
 .container {
-    display: flex;
-    flex-direction: column;
-    gap: 48px;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(48);
 }
 
 .content {
-    width: 966px;
+  width: vw-1490(966);
 
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap:24px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: vw-1490(24);
 
-    padding-top: 51px;
+  padding-top: vw-1490(51);
 
-    @media (max-width: 768px) {
-        width: 100%;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 32px 16px;
-        padding-top: 0;
-    }
+  @media (max-width: 768px) {
+    width: 100%;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 32px 16px;
+    padding-top: 0;
+  }
 }
