--- a/src/features/Products/products-filter/ProductsFilter.module.scss
+++ b/src/features/Products/products-filter/ProductsFilter.module.scss
@@ -1,34 +1,36 @@
+@import "../../../shared/styles/functions";
+
 .container {
-    width: 306px;
+  width: vw-1490(306);
 
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    & > h3 {
-        text-align: center;
-    }
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(20);
+  & > h3 {
+    text-align: center;
+  }
 
-    @media (max-width: 768px) {
-        width: 336px;
-    }
+  @media (max-width: 768px) {
+    width: 336px;
+  }
 }
 
 .resetFilter {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .priceContainer {
-    display: flex;
-    gap: 16px;
+  display: flex;
+  gap: vw-1490(16);
 }
 
 .inputContainer {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    width: 129px;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(8);
+  width: vw-1490(129);
 }
 
-.checkbox{
-    width: 242px;
+.checkbox {
+  width: vw-1490(242);
 }
