--- a/src/features/Profile/favorites/Favoriter.module.scss
+++ b/src/features/Profile/favorites/Favoriter.module.scss
@@ -1,30 +1,32 @@
+@import "../../../shared/styles/functions";
+
 .container {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(24);
 }
 .cardsContainer {
-    display: flex;
-    gap: 15px;
-    flex-wrap: wrap;
+  display: flex;
+  gap: vw-1490(15);
+  flex-wrap: wrap;
 
-    @media (max-width: 768px) {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 24px 16px;
-    }
+  @media (max-width: 768px) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px 16px;
+  }
 }
 
 .title {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .countFav {
-    color: var(--color-bg);
-    width: fit-content;
-    padding: 2px 6px;
-    border-radius: 4px;
-    background-color: var(--color-accent-orange);
-    margin-bottom: 15px;
+  color: var(--color-bg);
+  width: fit-content;
+  padding: vw-1490(2) vw-1490(6);
+  border-radius: 4px;
+  background-color: var(--color-accent-orange);
+  margin-bottom: vw-1490(15);
 }
