--- a/src/features/Profile/my-addresses/MyAddresses.module.scss
+++ b/src/features/Profile/my-addresses/MyAddresses.module.scss
@@ -1,85 +1,87 @@
+@import "../../../shared/styles/functions";
+
 .container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+
+  & > h3 {
+    margin-bottom: vw-1490(16);
+  }
+
+  @media (max-width: 768px) {
+    width: 336px;
 
     & > h3 {
-        margin-bottom: 16px;
+      text-align: center;
     }
-
-    @media (max-width: 768px) {
-        width: 336px;
-
-        & > h3 {
-            text-align: center;
-        }
-    }
+  }
 }
 
 .addAddress {
-    display: flex;
-    flex-direction: column;
-    & > p {
-        margin-bottom: 20px;
-    }
+  display: flex;
+  flex-direction: column;
+  & > p {
+    margin-bottom: vw-1490(20);
+  }
 }
 
 .radioAddress {
+  & > div {
+    height: vw-1490(143);
+    width: vw-1490(460);
     & > div {
-        height: 143px;
-        width: 460px;
-        & > div {
-            max-width: 100%;
-        }
-
-        @media (max-width: 768px) {
-            width: 336px;
-        }
+      max-width: 100%;
     }
+
+    @media (max-width: 768px) {
+      width: 336px;
+    }
+  }
 }
 
 .button {
-    width: 230px;
-    height: 58px;
-    @media (max-width: 768px) {
-        width: 100%;
-    }
+  width: vw-1490(230);
+  height: vw-1490(58);
+  @media (max-width: 768px) {
+    width: 100%;
+  }
 }
 
 .cards {
-    display: flex;
-    gap: 25px;
-    flex-wrap: wrap;
-    margin-bottom: 32px;
+  display: flex;
+  gap: vw-1490(25);
+  flex-wrap: wrap;
+  margin-bottom: vw-1490(32);
 }
 
 .card {
-    box-sizing: border-box;
-    width: 460px;
-    padding: 20px;
-    border: 1px solid #2125314D;
-    border-radius: 6px;
-    background-color: var(--color-bg);
-    box-shadow: 6px 12px 13px 0px #2225310A;
+  box-sizing: border-box;
+  width: vw-1490(460);
+  padding: vw-1490(20);
+  border: 1px solid #2125314d;
+  border-radius: 6px;
+  background-color: var(--color-bg);
+  box-shadow: 6px 12px 13px 0px #2225310a;
 }
 
 .title {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 14px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: vw-1490(14);
 }
 
 .checkboxContainer {
-    display: flex;
-    align-items: center;
-    gap: 8px;
+  display: flex;
+  align-items: center;
+  gap: vw-1490(8);
 }
 
-.editButton{
-    display: flex;
-    margin-left: auto;
-    margin-top: 19px;
-    text-decoration: underline;
-    color: (--color-grey-3);
-    cursor: pointer;
+.editButton {
+  display: flex;
+  margin-left: auto;
+  margin-top: vw-1490(19);
+  text-decoration: underline;
+  color: (--color-grey-3);
+  cursor: pointer;
 }
