--- a/src/features/Profile/order-item/OrderItem.module.scss
+++ b/src/features/Profile/order-item/OrderItem.module.scss
@@ -1,41 +1,42 @@
+@import "../../../shared/styles/functions";
+
 .orderCard {
-    width: 460px;
-    padding: 25px;
-    box-sizing: border-box;
+  width: vw-1490(460);
+  padding: vw-1490(25);
+  box-sizing: border-box;
 
-    border: 1px solid #2125314D;
-    border-radius: 6px;
-    box-shadow: 6px 12px 13px 0px #2225310A;
+  border: 1px solid #2125314d;
+  border-radius: 6px;
+  box-shadow: 6px 12px 13px 0px #2225310a;
 
-    @media (max-width: 768px) {
-        width: 336px;
-        padding: 20px 16px;
-    }
+  @media (max-width: 768px) {
+    width: 336px;
+    padding: 20px 16px;
+  }
 }
 
 .orderTitle {
-    margin-bottom: 16px;
+  margin-bottom: vw-1490(16);
 }
 
 .orderFields {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(12);
 
-    margin-bottom: 20px;
-    & > p {
-        display: flex;
-        gap: 8px;
-       & > span {
-            font-weight: 700;
-        }
+  margin-bottom: vw-1490(20);
+  & > p {
+    display: flex;
+    gap: vw-1490(8);
+    & > span {
+      font-weight: 700;
     }
-    
+  }
 }
 .button {
-    display: flex;
-    margin-left: auto;
-    cursor: pointer;
-    color: var(--color-grey-3);
-    text-decoration: underline;
+  display: flex;
+  margin-left: auto;
+  cursor: pointer;
+  color: var(--color-grey-3);
+  text-decoration: underline;
 }
