--- a/src/features/Profile/orders/Orders.module.scss
+++ b/src/features/Profile/orders/Orders.module.scss
@@ -1,23 +1,25 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
+@import "../../../shared/styles/functions";
 
-    @media (max-width: 768px) {
-        & > h3 {
-            text-align: center;
-            gap: 20px;
-        }
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(24);
+
+  @media (max-width: 768px) {
+    & > h3 {
+      text-align: center;
+      gap: 20px;
     }
+  }
 }
 
 .ordersContainer {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 25px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: vw-1490(25);
 
-    @media (max-width: 768px) {
-        flex-direction: column;
-        gap: 16px;
-    }
+  @media (max-width: 768px) {
+    flex-direction: column;
+    gap: 16px;
+  }
 }
