--- a/src/features/Profile/profile-page/ProfilePage.module.scss
+++ b/src/features/Profile/profile-page/ProfilePage.module.scss
@@ -1,74 +1,75 @@
+@import "../../../shared/styles/functions";
+
 .container {
-    display: flex;
-    flex-direction: column;
-    gap: 36px;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(36);
 
+  margin-bottom: vw-1490(140);
+  & > h1 {
+    text-align: center;
+  }
 
-    margin-bottom: 140px;
-    & > h1 {
-        text-align: center;
-    }
-
-    @media (max-width: 768px) {
-        width: 336px;
-        margin: 0 auto 72px;
-        gap: 32px;
-    }
+  @media (max-width: 768px) {
+    width: 336px;
+    margin: 0 auto 72px;
+    gap: 32px;
+  }
 }
 
 .nav {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    @media (max-width: 768px) {   
-        width: 336px;
-    }
+  @media (max-width: 768px) {
+    width: 336px;
+  }
 }
 .navItem {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    text-align: left;
-    gap: 12px;
-    
-    text-decoration: none;
-    border-radius: 6px;
-    padding: 16px 12px;
-    & > h4 {
-        width: 248px;
-    }
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  text-align: left;
+  gap: vw-1490(12);
 
-    @media (max-width: 768px) {
-        justify-content: space-between;
-    }
+  text-decoration: none;
+  border-radius: 6px;
+  padding: vw-1490(16) vw-1490(12);
+  & > h4 {
+    width: vw-1490(248);
+  }
 
-    &:hover {
-        background-color: var(--color-grey-1);
-    }
+  @media (max-width: 768px) {
+    justify-content: space-between;
+  }
+
+  &:hover {
+    background-color: var(--color-grey-1);
+  }
 }
 
 .iconCategory {
-    width: 22px;
-    height: 22px;
-    flex-shrink: 0;
+  width: vw-1490(22);
+  height: vw-1490(22);
+  flex-shrink: 0;
 }
 
 .active {
-    background-color: var(--color-grey-1);
-    & > p {
-        color: var(--color-bg);
-    }
-    & > svg {
-        color: var(--color-accent-orange);
-    }
+  background-color: var(--color-grey-1);
+  & > p {
+    color: var(--color-bg);
+  }
+  & > svg {
+    color: var(--color-accent-orange);
+  }
 }
 
 .content {
-    display: flex;
-    gap: 45px;
+  display: flex;
+  gap: vw-1490(45);
 
-    @media (max-width: 768px) {
-        flex-direction: column;
-        gap: 32px;
-    }
+  @media (max-width: 768px) {
+    flex-direction: column;
+    gap: 32px;
+  }
 }
