--- a/src/features/Profile/profile-personal-data/ProfilePersonalData.module.scss
+++ b/src/features/Profile/profile-personal-data/ProfilePersonalData.module.scss
@@ -1,71 +1,73 @@
+@import "../../../shared/styles/functions";
+
 .container {
-    width: 100%;
+  width: 100%;
 
+  & > h3 {
+    margin-bottom: vw-1490(24);
+  }
+
+  @media (max-width: 768px) {
     & > h3 {
-        margin-bottom: 24px;
+      text-align: center;
     }
-
-    @media (max-width: 768px) {
-        & > h3 {
-            text-align: center;
-        }
-    }
+  }
 }
 .inputsContainer {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 32px 25px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: vw-1490(32) vw-1490(25);
 
-    @media (max-width: 768px) {
-        display: flex;
-        flex-direction: column;
-        gap: 16px;
-    }
-}
-.inputContainer{
+  @media (max-width: 768px) {
     display: flex;
     flex-direction: column;
+    gap: 16px;
+  }
+}
+.inputContainer {
+  display: flex;
+  flex-direction: column;
 
-    gap: 8px;
+  gap: vw-1490(8);
 }
 
 .button {
-    display: flex;
-    text-decoration: underline;
-    margin: 24px 0 32px auto;
+  display: flex;
+  text-decoration: underline;
+  margin: vw-1490(24) 0 vw-1490(32) auto;
 
-    @media (max-width: 768px) {
-        margin: 20px auto 32px;
-    }
+  @media (max-width: 768px) {
+    margin: 20px auto 32px;
+  }
 }
 
 .buttonsContainer {
-    display: flex;
-    gap: 20px;
-    justify-content: right;
+  display: flex;
+  gap: vw-1490(20);
+  justify-content: right;
 
-    @media (max-width: 768px) {
-        flex-direction: column;
-    }
+  @media (max-width: 768px) {
+    flex-direction: column;
+  }
 }
 
 .logutButton {
-    width: fit-content;
-    height: 58px;
+  width: fit-content;
+  height: vw-1490(58);
 
-    @media (max-width: 768px) {
-        margin: 0;
-        width: 100%;
-    }
+  @media (max-width: 768px) {
+    margin: 0;
+    width: 100%;
+  }
 }
 
 .deleteButton {
-    width: 230px;
-    height: 58px;
+  width: vw-1490(230);
+  height: vw-1490(58);
 
-    @media (max-width: 768px) {
-        margin: 0;
-        width: 100%;
-    }
+  @media (max-width: 768px) {
+    margin: 0;
+    width: 100%;
+  }
 }
