--- a/src/features/RegularCustomer/gift-cards/GiftCards.module.scss
+++ b/src/features/RegularCustomer/gift-cards/GiftCards.module.scss
@@ -1,76 +1,78 @@
+@import "../../../shared/styles/functions";
+
 .container {
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(24);
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
     display: flex;
     flex-direction: column;
-    gap: 24px;
-    ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
-        & > li {    
-            position: relative;
-            padding-left: 16px;
-            &::before {
-                box-sizing: border-box;
-                content: "";
-                position: absolute;
-                top: 50%;
-                left: 0;
-                transform: translateY(-50%) rotate(45deg);
-                width: 7px;
-                height: 7px;
-                background-color: var(--color-accent-orange);
-                border-radius: 1px;
-            }
+    gap: vw-1490(12);
+    & > li {
+      position: relative;
+      padding-left: vw-1490(16);
+      &::before {
+        box-sizing: border-box;
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%) rotate(45deg);
+        width: vw-1490(7);
+        height: vw-1490(7);
+        background-color: var(--color-accent-orange);
+        border-radius: 1px;
+      }
 
-            @media (max-width: 768px) {
-                padding-left: 26px;
-            }
-        }
-
-        @media (max-width: 768px) {
-            gap: 8px;
-        }
+      @media (max-width: 768px) {
+        padding-left: 26px;
+      }
     }
 
     @media (max-width: 768px) {
-        gap: 12px;
+      gap: 8px;
     }
+  }
+
+  @media (max-width: 768px) {
+    gap: 12px;
+  }
 }
 
 .card {
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(32);
+  align-items: center;
 
-    @media (max-width: 768px) {
-        gap: 24px;
-    }
+  @media (max-width: 768px) {
+    gap: 24px;
+  }
 }
 
 .nav {
-    display: flex;
-    gap: 20px;
-    & > h3 {    
-        cursor: pointer;
-        padding: 6px 10px;
-        border-radius: 4px;
-        background-color: var(--color-grey-1);
-        width: fit-content;
-        &.active {
-            color: var(--color-bg);
-            background-color: var(--color-accent-orange);
-        }
+  display: flex;
+  gap: vw-1490(20);
+  & > h3 {
+    cursor: pointer;
+    padding: vw-1490(6) vw-1490(10);
+    border-radius: 4px;
+    background-color: var(--color-grey-1);
+    width: fit-content;
+    &.active {
+      color: var(--color-bg);
+      background-color: var(--color-accent-orange);
     }
+  }
 
-    @media (max-width: 768px) {
-        margin-top: 36px;
-        flex-direction: column;
-        align-items: center;
-        gap: 12px;
-    }
+  @media (max-width: 768px) {
+    margin-top: 36px;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+  }
 }
