--- a/src/features/RegularCustomer/gift-cards/activate-card/ActivateCard.module.scss
+++ b/src/features/RegularCustomer/gift-cards/activate-card/ActivateCard.module.scss
@@ -1,21 +1,23 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-    width: 100%;
+@import "../../../../shared/styles/functions";
 
-    @media (max-width: 768px) {
-        gap: 16px;
-    }
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(24);
+  width: 100%;
+
+  @media (max-width: 768px) {
+    gap: 16px;
+  }
 }
 
 .inputContainer {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(8);
 }
 
 .button {
-    width: 100%;
-    height: 58px;
+  width: 100%;
+  height: vw-1490(58);
 }
