--- a/src/features/RegularCustomer/regular-customer-content/RegularCustomerContent.module.scss
+++ b/src/features/RegularCustomer/regular-customer-content/RegularCustomerContent.module.scss
@@ -1,59 +1,61 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
+@import "../../../shared/styles/functions";
 
-    & > h1 {
-        text-align: center;
-    }
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(32);
+
+  & > h1 {
+    text-align: center;
+  }
 }
 .content {
-    display: flex;
-    gap: 45px;
-    @media (max-width: 768px) {
-        flex-direction: column;
-        gap: 36px;
-    }
+  display: flex;
+  gap: vw-1490(45);
+  @media (max-width: 768px) {
+    flex-direction: column;
+    gap: 36px;
+  }
 }
 
 .navigate {
-    width: 306px;
-    display: flex;
-    flex-direction: column;
-    @media (max-width: 768px) {
-        width: 336px;
-    }
+  width: vw-1490(306);
+  display: flex;
+  flex-direction: column;
+  @media (max-width: 768px) {
+    width: 336px;
+  }
 }
 .navItem {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    text-decoration: none;
-    
-    border-radius: 6px;
-    padding: 16px 12px;
-    & > h4 {
-        width: 248px;
-    }
+  display: flex;
+  align-items: center;
+  gap: vw-1490(12);
+  text-decoration: none;
 
-    &:hover {
-        cursor: pointer;
-        background-color: var(--color-grey-1);
-    }
+  border-radius: 6px;
+  padding: vw-1490(16) vw-1490(12);
+  & > h4 {
+    width: vw-1490(248);
+  }
+
+  &:hover {
+    cursor: pointer;
+    background-color: var(--color-grey-1);
+  }
 }
 
 .iconCategory {
-    width: 22px;
-    height: 22px;
-    flex-shrink: 0;
+  width: vw-1490(22);
+  height: vw-1490(22);
+  flex-shrink: 0;
 }
 
 .active {
-    background-color: var(--color-grey-1);
-    & > p {
-        color: var(--color-bg);
-    }
-    & > svg {
-        color: var(--color-accent-orange);
-    }
-}   
+  background-color: var(--color-grey-1);
+  & > p {
+    color: var(--color-bg);
+  }
+  & > svg {
+    color: var(--color-accent-orange);
+  }
+}
