--- a/src/features/RegularCustomer/regular-custormer-page/RegularCustomerPage.module.scss
+++ b/src/features/RegularCustomer/regular-custormer-page/RegularCustomerPage.module.scss
@@ -1,13 +1,15 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    gap: 140px;
+@import "../../../shared/styles/functions";
 
-    margin-bottom: 140px;
-    @media (max-width: 768px) {
-        gap: 72px;
-        width: 336px;
-        margin: 0 auto;
-        margin-bottom: 72px;
-    }
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(140);
+
+  margin-bottom: vw-1490(140);
+  @media (max-width: 768px) {
+    gap: 72px;
+    width: 336px;
+    margin: 0 auto;
+    margin-bottom: 72px;
+  }
 }
