--- a/src/features/Shares/shares/Shares.module.scss
+++ b/src/features/Shares/shares/Shares.module.scss
@@ -1,23 +1,25 @@
-.container {
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    gap: 36px;
-    align-items: center;
+@import "../../../shared/styles/functions";
 
-    @media (max-width: 768px) {
-        gap: 32px;
-    }
+.container {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(36);
+  align-items: center;
+
+  @media (max-width: 768px) {
+    gap: 32px;
+  }
 }
 .sharesContainer {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr); 
-    grid-auto-rows: auto; 
-    column-gap: 24px;
-    row-gap: 42px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: auto;
+  column-gap: vw-1490(24);
+  row-gap: vw-1490(42);
 
-    @media (max-width: 768px) {
-        display: flex;
-        flex-direction: column;
-    }
+  @media (max-width: 768px) {
+    display: flex;
+    flex-direction: column;
+  }
 }
