--- a/src/features/ShoppingCart/shopping-cart-page/ShoppingCartPage.module.scss
+++ b/src/features/ShoppingCart/shopping-cart-page/ShoppingCartPage.module.scss
@@ -1,110 +1,111 @@
+@import "../../../shared/styles/functions";
+
 .container {
-    display: flex;
-    flex-direction: column;
-    gap: 36px;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(36);
 
-    margin-bottom: 140px;
-    & > h1 {
-        text-align: center;
-    }
+  margin-bottom: vw-1490(140);
+  & > h1 {
+    text-align: center;
+  }
 
-    @media (max-width: 768px) {
-        width: 336px;
-        margin: 0 auto;
-        margin-bottom: 72px;
-    }
+  @media (max-width: 768px) {
+    width: 336px;
+    margin: 0 auto;
+    margin-bottom: 72px;
+  }
 }
 
 .content {
-    display: flex;
-    justify-content: space-between;
-    @media (max-width: 768px) {
-        flex-direction: column;
-        gap: 32px;
+  display: flex;
+  justify-content: space-between;
+  @media (max-width: 768px) {
+    flex-direction: column;
+    gap: 32px;
 
-        align-items: center;
-    }
+    align-items: center;
+  }
 }
 
 .mobileContent {
-    width: 336px;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    gap: 24px 16px;
+  width: 336px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px 16px;
 }
 
 .tableContainer {
-    width: 924px;
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
+  width: vw-1490(924);
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(24);
 
-    & > table {
-        width: 100%;
-        box-sizing: border-box;
-        border-collapse: collapse
-    }
-    & > table > thead > tr > th, td {
-        text-align: left;
-    }
-    
-    & > table > thead > tr > th {
-        padding-bottom: 8px;
-        border-bottom: 1px solid #7D7D7D50;
-    }
+  & > table {
+    width: 100%;
+    box-sizing: border-box;
+    border-collapse: collapse;
+  }
+  & > table > thead > tr > th,
+  td {
+    text-align: left;
+  }
+
+  & > table > thead > tr > th {
+    padding-bottom: vw-1490(8);
+    border-bottom: 1px solid #7d7d7d50;
+  }
 }
 
 .title {
-    width: 370px;
-    box-sizing: border-box;
+  width: vw-1490(370);
+  box-sizing: border-box;
 }
 
-
-
 .image {
-    border-radius: 6px;
-    background-color: var(--color-grey-1);
+  border-radius: 6px;
+  background-color: var(--color-grey-1);
 }
 
 .trashButton {
-    outline: none   ;
+  outline: none;
 }
 
 .clearButton {
-    text-align: left;
-    cursor: pointer;
-    text-decoration: underline;
+  text-align: left;
+  cursor: pointer;
+  text-decoration: underline;
 }
 
 .price {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: vw-1490(20);
 
-    width: 306px;
-    height: fit-content;
-    padding: 32px 24px;
+  width: vw-1490(306);
+  height: fit-content;
+  padding: vw-1490(32) vw-1490(24);
 
-    border: 1px solid #2125314D;
-    border-radius: 6px;
-    box-shadow: 6px 12px 13px 0px #2225310A;
+  border: 1px solid #2125314d;
+  border-radius: 6px;
+  box-shadow: 6px 12px 13px 0px #2225310a;
 
-    @media (max-width: 768px) {
-        width: 336px;
-    }
+  @media (max-width: 768px) {
+    width: 336px;
+  }
 }
 .total {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 .buttonsContainer {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    gap: 12px;
+  gap: vw-1490(12);
 
-    & > button {
-        height: 58px;
-    }
+  & > button {
+    height: vw-1490(58);
+  }
 }
